--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,88 @@
-{% extends "layout.html" %}
-
-{% block children %}
+{% extends "layout.html" %} {% block children %}
 
 <h1>Cinemaps</h1>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum reiciendis omnis ea enim quae cupiditate quaerat rem sint dignissimos non architecto aut rerum eligendi quos, nemo voluptatem mollitia ipsam dicta.</p>
+<p>
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum reiciendis
+  omnis ea enim quae cupiditate quaerat rem sint dignissimos non architecto aut
+  rerum eligendi quos, nemo voluptatem mollitia ipsam dicta.
+</p>
+
+<div class="container">
+  <!-- <button
+    class="bt btn-primary glyphicon glyphicon-menu-hamburger"
+    type="button"
+    aria-controls="menu-lateral"
+    data-bs-toggle="offcanvas"
+    data-bs-target="#menu-lateral"
+  ></button> -->
+
+  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+    Button with data-bs-target
+  </button>
+
+  <div class="form-control">
+    <input type="text" id="pesquisar" name="pesquisar" />
+  </div>
+</div>
+
+<!-- <div
+  class="offcanvas offcanvas-down"
+  tabindex="-1"
+  id="menu-lateral"
+  aria-labelledby="menu-lateral"
+>
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+    <button
+      type="button"
+      class="btn-close text-reset"
+      data-bs-dismiss="offcanvas"
+      aria-label="Close"
+    ></button>
+  </div>
+  <div class="offcanvas-body">
+    <div>
+      Some text as placeholder. In real life you can have the elements you have
+      chosen. Like, text, images, lists, etc.
+    </div>
+    <div class="dropdown mt-3">
+      <button
+        class="btn btn-secondary dropdown-toggle"
+        type="button"
+        id="dropdownMenuButton"
+        data-bs-toggle="dropdown"
+      >
+        Dropdown button
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+  </div>
+</div> -->
+
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div>
+        Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+      </div>
+      <div class="dropdown mt-3">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+          Dropdown button
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
 {% endblock %}
