--- a/templates/cinema.html
+++ b/templates/cinema.html
@@ -117,7 +117,91 @@
   </div>
 </div>
 
-<script>
+<!-- Pin de Cinema -->
+<!-- <button type="button" class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#cinema">Cinema</button> -->
+
+<div class="offcanvas offcanvas-bottom h-75" id="cinema{{ cinema }}">
+    <div class="offcanvas-header justify-content-between">
+        <div class="col-md-8 col-sm-8">
+            <h2 class="fs-1 offcanvas-title">CINEMA {{ cinema}} </h2>
+            <p class="fs-5">rua x, n° - bairro</p>
+        </div>
+        <div class="d-flex justify-content-between col-md-2 col-sm-4">
+            <button class="d-flex justify-content-between align-items-center btn p-3 fs-2 border border-dark border-3 rounded-circle" style="width: 40%;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                    <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                </svg>
+            </button>
+            <button class="d-flex justify-content-between align-items-center btn p-3 fs-2 border border-dark border-3 rounded-circle" style="width: 40%;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-bookmark" viewBox="0 0 16 16">
+                    <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <div class="offcanvas-body p-0">
+        <img class="img-fluid mx-auto d-block" src="https://placehold.co/800x400/png" alt="imagem">
+        <div class="p-3 border-bottom d-flex flex-row justify-content-between align-items-center">
+            <div class="col-md-7 col-sm-8">
+                <p class="fs-1">
+                    ★★★★★ 4,8
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil laudantium consequatur, eos impedit sapiente fugiat!</p>
+            </div>
+            <div class="col-md-2 col-sm-3 d-flex flex-row-reverse">
+                <button class="d-flex justify-content-between align-items-center btn p-3 border border-dark border-3 rounded-circle mx-auto" style="width: 50%; height: auto;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
+                        <path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"/>
+                    </svg>
+                </button>
+            </div>
+        </div>
+        <div class="p-3">
+            <h3>PROGRAMAÇÃO</h3>
+            <div class="d-flex">
+                <button class="fs-1 p-3 bg-info rounded border m-1">1</button>
+                <button class="fs-1 p-3 bg-info rounded border m-1">2</button>
+                <button class="fs-1 p-3 bg-info rounded border m-1">3</button>
+            </div>
+        </div>
+        <div class="d-grid gap-3 p-3">
+            <div class="d-flex justify-content-between">
+                <div>
+                    <h4 class="fs-2">FILME</h4>
+                    <p class="fs-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, deserunt molestias quo architecto optio sapiente!</p>
+                </div>
+                <div>
+                    <img class="img-fluid rounded" src="https://placehold.co/600x300/png" alt="">
+                </div>
+            </div>
+            <div class="d-flex justify-content-between">
+                <div>
+                    <h4 class="fs-2">FILME</h4>
+                    <p class="fs-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, deserunt molestias quo architecto optio sapiente!</p>
+                </div>
+                <div>
+                    <img class="img-fluid rounded" src="https://placehold.co/600x300/png" alt="">
+                </div>
+            </div>
+            <div class="d-flex justify-content-between">
+                <div>
+                    <h4 class="fs-2">FILME</h4>
+                    <p class="fs-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, deserunt molestias quo architecto optio sapiente!</p>
+                </div>
+                <div>
+                    <img class="img-fluid rounded" src="https://placehold.co/600x300/png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script type="module">
+    var offCanvas = document.getElementById('cinema{{ cinema }}')
+    var bsOffCanvas = new bootstrap.Offcanvas(offCanvas);
+
+    bsOffCanvas.show()
+
     var map = new maplibregl.Map({
         container: 'map', // container id
         style: 'https://api.maptiler.com/maps/streets/style.json?key=get_your_own_OpIi9ZULNHzrESv6T2vL', // style URL
