arrumar formatação de barra de pesquisa

--- a/templates/cinema.html
+++ b/templates/cinema.html
@@ -6,7 +6,7 @@
 
 <!-- Componente de Pesquisa -->
 <div
-  class="bg-white container d-flex justify-content-between align-items-center rounded-pill p-2 position-absolute top-0 start-50 translate-middle mt-5 mb-5"
+  class="mw-100 bg-white container d-flex justify-content-between align-items-center rounded-pill p-2 position-absolute top-0 start-50 translate-middle mt-5 mb-5"
 >
   <div class="d-flex align-items-center">
     <button
@@ -30,7 +30,7 @@
         />
       </svg>
     </button>
-     <form class="m-0 d-flex align-items-center justify-content-center border-0 bg-transparent fs-4">
+     <form class="col-sm-2 m-0 d-flex align-items-center justify-content-center border-0 bg-transparent fs-4">
         <input
             class="bg-transparent border-0"
             type="text"
