--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,56 @@
     <script src='https://unpkg.com/maplibre-gl@4.7.1/dist/maplibre-gl.js'></script>
 </head>
 <body>
+    <!-- Componente de Pesquisa -->
+    <div
+        class="mw-100 bg-white container d-flex justify-content-between align-items-center rounded-pill p-2 position-absolute top-0 start-50 translate-middle mt-5 mb-5"
+        style="z-index: 1;"
+    >
+    <div class="d-flex align-items-center">
+    <button
+        class="col-md-1 col-sm-1 border-0 bg-transparent h-100"
+        type="button"
+        aria-controls="menu-lateral"
+        data-bs-toggle="offcanvas"
+        data-bs-target="#menu-lateral"
+    >
+        <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="35"
+        height="35"
+        fill="currentColor"
+        class="bi bi-list"
+        viewBox="0 0 16 16"
+        >
+        <path
+            fill-rule="evenodd"
+            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"
+        />
+        </svg>
+    </button>
+    <form class="col-sm-2 m-0 d-flex align-items-center justify-content-center border-0 bg-transparent fs-4">
+        <input
+            class="bg-transparent border-0"
+            type="text"
+            id="pesquisar"
+            name="pesquisar"
+            placeholder="Pesquisar..."
+        />
+        </form>
+    </div>
+
+    <button
+        class="col-md-1 col-sm-1 border-0 bg-transparent"
+        type="button"
+        data-bs-toggle="modal"
+        data-bs-target="#modal-perfil"
+    >
+        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+        </svg>
+    </button>
+    </div>
+
     {% block navbar %}
     {% endblock %}
 
