--- a/templates/index.html
+++ b/templates/index.html
@@ -1,62 +1,3 @@
-{% extends "layout.html" %} {% block children %}
+{% extends "layout.html" %} 
 
-<!-- Menu Lateral -->
-<div
-  class="offcanvas offcanvas-start"
-  tabindex="-1"
-  id="menu-lateral"
-  aria-labelledby="menu-lateral"
->
-  <div class="offcanvas-header">LOGO</div>
-  <div class="offcanvas-body">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis neque
-    repellendus, magnam similique architecto, dolores ex magni inventore ad
-    natus quod saepe quam officiis reprehenderit nisi, cum fugiat dolorum
-    voluptates.
-  </div>
-</div>
-
-<!-- Modal -->
-<div
-  class="modal fade"
-  id="modal-perfil"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog modal-dialog-centered mh-5">
-    <div class="modal-content">
-
-      <div class="modal-header">
-        <div class="d-flex">
-            <div class="col-md-5">
-                PERFIL
-            </div>
-            <div class="col-md-7 d-flex justify-content-center flex-column">
-                <h3>NOME</h3>
-                <p>exemplo@gmail.com</p>
-            </div>
-        </div>
-
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Fechar"
-        ></button>
-      </div>
-
-      <div class="modal-body">
-        <ul class="list-group d-flex flex-column list-unstyled fs-4">
-          <li><a style="color: currentColor;" href="#">Alterar nome de usuário</a></li>
-          <li><a style="color: currentColor;" href="#">Alterar email</a></li>
-          <li><a style="color: currentColor;" href="#">Alterar senha</a></li>
-          <li><a style="color: currentColor;" href="#">Excluir conta</a></li>
-        </ul>
-      </div>
-      
-    </div>
-  </div>
-</div>
-
-{% endblock %}
+{% block children %}{% endblock %}
