arrumar tamanho de menu lateral

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -71,6 +71,7 @@
     <!-- Menu Lateral -->
     <div
         class="offcanvas offcanvas-start"
+        style="width: 75dvw;"
         tabindex="-1"
         id="menu-lateral"
         aria-labelledby="menu-lateral"
