mudar estilo para mais curto

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Componente de Pesquisa -->
     <div
-        class="mw-100 bg-white container container-sm d-flex justify-content-between align-items-center rounded-pill p-2 position-absolute top-0 start-50 translate-middle mt-5 mb-5"
+        class="bg-white container container-sm d-flex justify-content-between align-items-center rounded-pill p-2 position-absolute top-0 start-50 translate-middle my-5"
         style="z-index: 1;"
     >
     <div class="d-flex align-items-center">
