--- a/templates/cinema.html
+++ b/templates/cinema.html
@@ -3,7 +3,7 @@
 <div class="offcanvas offcanvas-bottom h-75" id="cinema{{ cinema }}">
     <div class="offcanvas-header justify-content-between">
         <div class="col-6">
-            <h2 class="fs-1 offcanvas-title">CINEMA {{ cinema}} </h2>
+            <h2 class="fs-1 offcanvas-title">CINEMA {{ cinema }} </h2>
             <p class="fs-5">rua x, n° - bairro</p>
         </div>
         <div class="d-flex justify-content-between col-5">
@@ -77,6 +77,7 @@
 </div>
 
 <script type="module">
+    // Obtém o offcanvas e abre ele
     var offCanvas = document.getElementById('cinema{{ cinema }}')
     var bsOffCanvas = new bootstrap.Offcanvas(offCanvas);
 
