adicionar links de menu lateral

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -95,12 +95,15 @@
       id="menu-lateral"
       aria-labelledby="menu-lateral"
     >
-      <div class="offcanvas-header">LOGO</div>
+      <div class="offcanvas-header border-1 border-bottom p-6">LOGO</div>
       <div class="offcanvas-body">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
-        neque repellendus, magnam similique architecto, dolores ex magni
-        inventore ad natus quod saepe quam officiis reprehenderit nisi, cum
-        fugiat dolorum voluptates.
+        <ul class="list-group list-unstyled fs-3 px-3 gap-4">
+            <li><a href="#" style="color: currentColor;" class="text-decoration-none">Salvos</a></li>
+            <li><a href="#" style="color: currentColor;" class="text-decoration-none">Histórico</a></li>
+            <li><a href="#" style="color: currentColor;" class="text-decoration-none">Configurações</a></li>
+            <li><a href="#" style="color: currentColor;" class="text-decoration-none">Ajuda</a></li>
+            <li><a href="#" style="color: currentColor;" class="text-decoration-none">Sair</a></li>
+        </ul>
       </div>
     </div>
 
@@ -133,11 +136,7 @@
 
           <div class="modal-body">
             <ul class="list-group d-flex flex-column list-unstyled fs-4">
-              <li>
-                <a style="color: currentColor" href="#"
-                  >Alterar nome de usuário</a
-                >
-              </li>
+              <li><a style="color: currentColor" href="#">Alterar nome de usuário</a></li>
               <li><a style="color: currentColor" href="#">Alterar email</a></li>
               <li><a style="color: currentColor" href="#">Alterar senha</a></li>
               <li><a style="color: currentColor" href="#">Excluir conta</a></li>
