--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
       class="bg-white container container-sm d-flex justify-content-between align-items-center rounded-pill p-2 position-absolute top-0 start-50 translate-middle my-5"
       style="z-index: 1"
     >
-      <div class="d-flex align-items-center">
+      <div class="d-flex align-items-center col-md-11 col-sm-11">
         <button
           class="col-md-1 col-sm-1 border-0 bg-transparent h-100"
           type="button"
@@ -49,7 +49,7 @@
           </svg>
         </button>
         <form
-          class="col-sm-2 m-0 d-flex align-items-center justify-content-center border-0 bg-transparent fs-4"
+          class="d-flex align-items-center justify-content-center border-0 bg-transparent fs-4"
         >
           <input
             class="bg-transparent border-0"
@@ -62,7 +62,7 @@
       </div>
 
       <button
-        class="col-md-1 col-sm-1 border-0 bg-transparent"
+        class="col-md-2 col-sm-2 border-0 bg-transparent"
         type="button"
         data-bs-toggle="modal"
         data-bs-target="#modal-perfil"
