--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block titulo %}Cinemaps{% endblock %}</title>
+    <!-- Lora Typefont -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: 'Lora', system-ui !important;
+      }
+    </style>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link
